--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -36,3 +36,5 @@
           [disabled]="loginForm.invalid">Login
   </button>
 </form>
+
+<p>Não é um usuário ? <a [routerLink]="['novousuario']"> Se cadastre ! </a></p>
