--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -3,12 +3,36 @@
 <form class="form mt-4 " [formGroup]="novoUsuarioForm" (submit)="cadastrar()">
     <div class="form-group">
         <input placeholder="e-mail" class="form-control" formControlName="email" />
+        <app-mensagem
+           *ngIf = "novoUsuarioForm.get('email')?.errors?.required && 
+                    novoUsuarioForm.get('email')?.touched"
+            mensagem="E-mail obrigatório"
+        >
+        </app-mensagem>        
+        <app-mensagem
+           *ngIf = "novoUsuarioForm.get('email')?.errors?.email && 
+                    novoUsuarioForm.get('email')?.touched"
+            mensagem="E-mail no formato incorreto."
+        >
+        </app-mensagem>        
     </div>
     <div class="form-group">
         <input placeholder="Nome Completo" class="form-control" formControlName="fullName" />
+        <app-mensagem
+           *ngIf = "novoUsuarioForm.get('fullName')?.errors && 
+                    novoUsuarioForm.get('fullName')?.touched"
+            mensagem="Nome incorreto"
+        >
+        </app-mensagem>        
     </div>
     <div class="form-group">
         <input placeholder="Usuário" class="form-control" formControlName="userName" />
+        <app-mensagem
+           *ngIf = "novoUsuarioForm.get('userName')?.errors?.minusculo && 
+                    novoUsuarioForm.get('userName')?.touched"
+            mensagem="Usuário deve ser em letra minúscula."
+        >
+        </app-mensagem>        
     </div>
     <div class="form-group">
         <input type="password" placeholder="Senha" class="form-control" formControlName="password" />
