--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -33,6 +33,12 @@
             mensagem="Usuário deve ser em letra minúscula."
         >
         </app-mensagem>        
+        <app-mensagem
+           *ngIf = "novoUsuarioForm.get('userName')?.errors?.usuarioExistente"
+            mensagem="Usuário Já Existe."
+        >
+        </app-mensagem>        
+
     </div>
     <div class="form-group">
         <input type="password" placeholder="Senha" class="form-control" formControlName="password" />
