--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -41,7 +41,15 @@
 
     </div>
     <div class="form-group">
-        <input type="password" placeholder="Senha" class="form-control" formControlName="password" />
+        <input type="password" 
+               placeholder="Senha" 
+               class="form-control" 
+               formControlName="password" />
+        <app-mensagem
+               *ngIf="novoUsuarioForm.errors?.senhaIgualUsuario"
+               mensagem="Senha deve ser diferente do usuário"
+             >
+        </app-mensagem>
     </div>
     <button class="btn btn-primary btn-block">Cadastro</button>
 </form>
